--- a/landing.html
+++ b/landing.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
+    <meta name="googlebot" content="noindex">
+    <meta name="robots" content="noarchive">
+    <meta name="robots" content="noimageindex">
     <title>Happy Birthday Countdown</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -120,7 +124,7 @@
     <div class="landing-container">
         <div class="video-container">
             <video autoplay muted loop id="myVideo">
-                <source src="videos/our-story.mp4" type="video/mp4">
+                <source src="/videos/our-story.mp4" type="video/mp4">
                 Your browser does not support HTML5 video.
             </video>
         </div>
