Add fireworks and celebration animations to home page

--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
     <div class="loading-screen">
         <div class="loading-content">
             <h1>🎉 Happy Birthday!</h1>
-            <div class="confetti-container">
-                <div class="confetti"></div>
-                <div class="confetti"></div>
-                <div class="confetti"></div>
-                <div class="confetti"></div>
-                <div class="confetti"></div>
+            <div class="celebration-effects">
+                <div class="firework"></div>
+                <div class="firework"></div>
+                <div class="firework"></div>
+                <div class="firework"></div>
+                <div class="firework"></div>
+                <div class="confetti-container">
+                    <div class="confetti"></div>
+                    <div class="confetti"></div>
+                    <div class="confetti"></div>
+                    <div class="confetti"></div>
+                    <div class="confetti"></div>
+                </div>
             </div>
         </div>
     </div>
